// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should render correctly with alignSelf 1`] = `
<div
  className="sc-guDLRT dOIeyc"
/>
`;

exports[`Column component should render correctly with each direction padding props 1`] = `
<div
  className="sc-guDLRT uhlsv"
/>
`;

exports[`Column component should render correctly with each side padding props 1`] = `
<div
  className="sc-guDLRT kAPWbq"
/>
`;

exports[`Column component should render correctly with global padding props 1`] = `
<div
  className="sc-guDLRT efTRir"
/>
`;

exports[`Column component should render correctly with max width 1`] = `
<div
  className="sc-guDLRT cAeKDs"
/>
`;

exports[`Column component should render correctly with order props 1`] = `
<div
  className="sc-guDLRT PYIua"
/>
`;

exports[`Column component should render correctly with some props 1`] = `
<div
  className="sc-guDLRT omhJg"
/>
`;

exports[`Column component should render correctly with textAlign 1`] = `
<div
  className="sc-guDLRT cKbBAT"
/>
`;

exports[`Column component should render correctly without props 1`] = `
<div
  className="sc-guDLRT omhJg"
/>
`;
